# snake

./: .gitignore  Arraylist.c  Arraylist.h  CMakeLists.txt  README.md  main.c  main.h  makefile
include/: Arraylist.h  SNLogger.h  block.h  game.h  introScreen.h  main.h
src/: Arraylist.c  SNLogger.c  game.c  introScreen.c  main.c
